Refactor: apply FindBugs recommendations