@@ -263,6 +263,7 @@ public class Constructor extends SafeConstructor {
                                 typeDetected = true;
                             }
                             break;
+                        default: // scalar
                         }
                     }
                     if (!typeDetected && valueNode.getNodeId() != NodeId.scalar) {
@@ -426,7 +427,7 @@ public class Constructor extends SafeConstructor {
                     throw new YAMLException("Invalid node Character: '" + ch + "'; length: "
                             + ch.length());
                 } else {
-                    result = new Character(ch.charAt(0));
+                    result = Character.valueOf(ch.charAt(0));
                 }
             } else if (Date.class.isAssignableFrom(type)) {
                 Construct dateConstructor = yamlConstructors.get(Tag.TIMESTAMP);
@@ -462,7 +463,7 @@ public class Constructor extends SafeConstructor {
                 } else if (type == Short.class || type == Short.TYPE) {
                     result = new Short(result.toString());
                 } else if (type == Integer.class || type == Integer.TYPE) {
-                    result = new Integer(result.toString());
+                    result = Integer.parseInt(result.toString());
                 } else if (type == Long.class || type == Long.TYPE) {
                     result = new Long(result.toString());
                 } else {
